make Base_url in environment file instead of hardcoded

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TEST_USER_EMAIL=ahmedelmasry@live.com
 TEST_USER_PASSWORD=Flairstech@123
-TEST_USER_NAME=Ahmed Mohamed
+TEST_USER_NAME=Ahmed Mohamed1
+BASE_URL=https://automationexercise.com/api
